# birthday-wishes

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  scripts.py
bday_wishes/: asgi.py  settings.py  urls.py  wsgi.py
core/: adapters.py  admin.py  forms.py  models.py  settings.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20211031_1604.py  0003_auto_20211106_1001.py
core/templates/frontend/: index.html
frontend/templates/frontend/: index.html
projconfig/: asgi.py  settings.py  urls.py
templates/: base.html  index.html
templates/components/: birthday_wish_form.html
templates/registration/: login.html  signup.html
tests/: test_accounts.py  tests.py
