[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["\"Nick Muoh\" <\"nickspirit3+github@gmail.com\">"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
python-decouple = "^3.4"
Pillow = "^8.3.2"
django-extensions = "^3.1.3"
django-allauth = "^0.45.0"

[tool.poetry.scripts]
manage = "manage:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^4.4.0"
Werkzeug = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
